<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ECEFF1"
    android:padding="4dp"
    tools:targetApi="16">

    <TextView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/air_conditioner"
        android:id="@+id/ac_image"
        android:layout_below="@id/business_name"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/ac_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#4FC3F7"
        android:textSize="15sp"
        android:id="@+id/description_text"
        android:layout_margin="4dp"
        android:padding="2dp"
        android:fontFamily="sans-serif-medium" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@id/ac_image"
    android:layout_toRightOf="@id/description_text"
    android:layout_toEndOf="@id/description_text"
    android:background="#00E676"
    android:layout_centerInParent="true"
    android:layout_margin="4dp"
    android:padding="2dp"
    android:id="@+id/linear_layout">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/contact_us"
    android:textAllCaps="true"
    android:fontFamily="sans-serif-medium"
    android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_from" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_till"/>

</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:layout_centerInParent="true"
        android:text="@string/visit_us_at"
        android:layout_marginTop="25dp"
        android:id="@+id/visit_id"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/visit_id"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_us"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:id="@+id/visit_us_id"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_name"
        android:layout_centerInParent="true"
        android:layout_above="@id/visit_us_id"
        android:textAllCaps="true"
        android:id="@+id/owner_name_id"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:layout_toLeftOf="@id/owner_name_id"
        android:layout_toStartOf="@id/owner_name_id"
        android:layout_above="@id/visit_us_id"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>
</RelativeLayout>